# real-time-chat-django-next14

./: .gitignore  README.MD
chat_client/: .env.local  package-lock.json  package.json  tsconfig.json
chat_client/src/: common.types.ts  middleware.ts
chat_client/src/app/: layout.tsx
chat_client/src/app/(auth)/login/: page.tsx
chat_client/src/app/api/auth/session/: route.ts
chat_client/src/app/chatgroup/: Error.tsx  layout.tsx  page.tsx
chat_client/src/app/server/: api.ts
chat_client/src/components/: ChatRoom.tsx  Header.tsx  Message.tsx  MessageList.tsx  UserAccount.tsx  chatForm.tsx
chat_client/src/helper/: encDecText.ts
chat_client/src/lib/: actions.ts
chat_client/src/mocks/: messages.ts
chat_client/src/server/: api.ts
chat_server/: pyproject.toml  run.sh
chat_server/chatapp/: admin.py  check_auth.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
chat_server/logger/: logger_filters.py
chat_server/root/: asgi.py  settings.py  urls.py
chat_server/schema/: global_schema.py
